tests/ui/snapshots/and_instead_of_ampersands.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0110",
    "severity": "error",
    "phase": "parse",
    "title": "`&&` is not an operator in Ply; the boolean operators are `and`, `or`, `not`",
    "primary_span": {
      "file": "and_instead_of_ampersands.ply",
      "start": [
        2,
        7
      ],
      "end": [
        2,
        9
      ]
    },
    "fixes": [
      {
        "title": "use `and`",
        "edits": [
          {
            "span": {
              "file": "and_instead_of_ampersands.ply",
              "start": [
                2,
                7
              ],
              "end": [
                2,
                9
              ]
            },
            "replace": "and"
          }
        ]
      }
    ],
    "worklist_ref": null
  }
]
