tests/ui/snapshots/assign_to_call.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0114",
    "severity": "error",
    "phase": "parse",
    "title": "only a local, a field or an index can be assigned to",
    "primary_span": {
      "file": "assign_to_call.ply",
      "start": [
        2,
        5
      ],
      "end": [
        2,
        14
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
