tests/ui/snapshots/assign_to_call.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0114]: only a local, a field or an index can be assigned to
 --> assign_to_call.ply:2:5
  |
 2|     compute() = 1;
  |     ^^^^^^^^^

1 error
