tests/ui/snapshots/assignment_in_condition.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0110]: `=` assigns; use `==` to compare
 --> assignment_in_condition.ply:2:10
  |
 2|     if a = 1 {
  |          ^
help: use `==`
 2|     if a == 1 {

1 error
