tests/ui/snapshots/bad_string_escape.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0104",
    "severity": "error",
    "phase": "lex",
    "title": "unknown escape `\\q`; Ply supports \\n \\t \\\\ \\\" and \\u{...}",
    "primary_span": {
      "file": "bad_string_escape.ply",
      "start": [
        2,
        11
      ],
      "end": [
        2,
        13
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
