tests/ui/snapshots/bad_string_escape.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0104]: unknown escape `\q`; Ply supports \n \t \\ \" and \u{...}
 --> bad_string_escape.ply:2:11
  |
 2|     "hello\qworld"
  |           ^^

1 error
