tests/ui/snapshots/borrow_in_struct_field.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0123",
    "severity": "error",
    "phase": "parse",
    "title": "borrows exist only as parameters: they cannot appear in fields, return types or `let` bindings (§5.5)",
    "primary_span": {
      "file": "borrow_in_struct_field.ply",
      "start": [
        2,
        12
      ],
      "end": [
        2,
        13
      ]
    },
    "fixes": [
      {
        "title": "drop the borrow marker",
        "edits": [
          {
            "span": {
              "file": "borrow_in_struct_field.ply",
              "start": [
                2,
                12
              ],
              "end": [
                2,
                13
              ]
            },
            "replace": ""
          }
        ]
      }
    ],
    "worklist_ref": null
  }
]
