tests/ui/snapshots/chained_comparison.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0110",
    "severity": "error",
    "phase": "parse",
    "title": "`<` does not chain; write `a < b and b < c`",
    "primary_span": {
      "file": "chained_comparison.ply",
      "start": [
        2,
        11
      ],
      "end": [
        2,
        12
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
