tests/ui/snapshots/chained_comparison.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0110]: `<` does not chain; write `a < b and b < c`
 --> chained_comparison.ply:2:11
  |
 2|     a < b < c
  |           ^

1 error
